[gd_scene load_steps=4 format=3 uid="uid://dexydb78b1xtx"]

[ext_resource type="Script" uid="uid://bcbo1qabm3bcw" path="res://Scripts/game_session.gd" id="1_u852i"]
[ext_resource type="Script" uid="uid://bb6ch6olcwpsd" path="res://Scripts/world_manager.gd" id="2_2kh3l"]
[ext_resource type="Script" uid="uid://docmvalc37osn" path="res://Scripts/player_manager.gd" id="3_o6vwh"]

[node name="GameSession" type="Node"]
script = ExtResource("1_u852i")

[node name="WorldManager" type="Node" parent="."]
script = ExtResource("2_2kh3l")

[node name="PlayerManager" type="Node" parent="."]
script = ExtResource("3_o6vwh")
